solution to module 2

--- a/site/index.html
+++ b/site/index.html
@@ -2,9 +2,35 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Hello World</title>
+	<title>Alen Smajic</title>
+	<link rel="StyleSheet" type="text/css", href="style.css"/>
 </head>
-<body>
-<h1>Hello World!</h1>
+<body bgcolor="black" text="white" link="red" vlink="yellow" alink="blue">
+	<h1>Alen Smajic</h1>
+		<p id="header_description">Masters Student: Computer Science, Researcher at Volkswagen Self-Driving-Systems SOTIF</p>
+	<div>About Me</div>
+		<img src="alen-smajic.1024x1024.jpg", alt="Image of Alen Smajic", width="200", id="personal_img">
+		<p>I am a Computer Science Master student working as a machine learning engineer at Volkswagen's self-driving systems department. My research focuses on machine learning and computer vision with special focus on deep neural networks.</p>
+		<a href="https://www.xing.com/profile/Alen_Smajic2/cv", target="_blank">XING</a>
+		<a href="https://www.linkedin.com/in/alen-smajic-66bb80198/", target="_blank">LinkedIn</a>
+		<a href="https://github.com/alen-smajic", target="_blank">GitHub</a>
+		<a href="https://www.researchgate.net/profile/Alen-Smajic-2", target="_blank">ResearchGate</a>
+		<a href="https://www.youtube.com/channel/UCnEPvYpCkgHguFJTXJY_x5A", target="_blank">YouTube</a>
+	<div>Skills</div>
+		<ul>
+			<li>Python</li>
+			<li>C#</li>
+			<li>Unity3D</li>
+			<li>Blender</li>
+			<li>HTML5</li>
+			<li>PyTorch</li>
+			<li>TensorBoard</li>
+			<li>OpenCV</li>
+			<li>Matplotlib</li>
+			<li>PowerBI</li>
+		</ul>
+	<div>Publications</div>
+	<div>CV</div>
+	<footer>Copyright &copy; 2021 Alen Smajic. All Rights Reserved </footer>
 </body>
 </html>
