--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Module2-Solution</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>HTML, CSS, and Javascript for Web Developers - Module 2</title>
 	<link rel="StyleSheet" type="text/css", href="css/style.css"/>
 </head>
 <body>
